blocks/career-carousel/career-carousel.css
.career-carousel {
  --card-width: 16rem;

  margin-top: 3rem;
}

.career-slider {
  display: flex;
  flex-direction: column;
  margin-left: -1rem;
  width: calc((var(--card-width) + 3rem) * 4);
  overflow: hidden;
}

.career-slides {
  display: flex;
  overflow-x: scroll;
  scroll-behavior: smooth;

  /* We want to hide the scroll bar */
  -ms-overflow-style: none; /* for Internet Explorer, Edge */
  scrollbar-width: none; /* for Firefox */
}

/* Hide the scroll bar */
.career-slides::-webkit-scrollbar {
  /* for Chrome, Safari and Opera */
  display: none;
}

.career-carousel .career-card {
  flex-shrink: 0;
  box-shadow: #3c465040 0 2px 12px 0;
  margin: 0.5rem;
  padding: 1rem;
  width: var(--card-width);
  transition: all 0.15s ease-in-out;
}

.career-carousel .career-card:hover {
  box-shadow: #3c465066 0 4px 16px 0;
}

.career-carousel .career-card a {
  display: inline-flex;
  flex-direction: column;
  text-decoration: none;
}

.career-carousel .career-card picture {
  align-self: center;
  width: 14.375rem;
  margin: 0 0 1.375rem;
}

.career-carousel .career-card picture img {
  height: 16rem;
  width: 14.375rem;
}

.career-carousel .career-card blockquote {
  color: var(--primary);
  font-size: var(--body-font-size-l);
  font-style: normal;
  line-height: 29px;
  margin: 0 0 19px;
  max-height: 9.375rem;
  overflow: hidden;
  text-indent: 0;

  /* Show ellipsis on multiline text */
  display: -webkit-box;
  -webkit-line-clamp: 5; /* number of lines to show */
  -webkit-box-orient: vertical;
}

.career-carousel .career-card .career-card-bqc {
  height: 9.375rem;
  margin-bottom: 0.75rem;
}

.career-carousel .career-card h6 {
  color: var(--light-black);
  font-size: var( --heading-font-size-mxs);
  text-transform: none;
  margin-bottom: 6px;
}

.career-carousel .career-card p {
  color: var(--light-black);
  font-size: var(--body-font-size-s);
  height: 2.5rem;
  line-height: 21.6px;
  margin-bottom: 0.75rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

.career-carousel .career-card button {
  background-color: unset;
  color: var(--secondary);
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  font-weight: var(--font-weight-medium);
  justify-content: left;
  height: auto;
  padding: 0;
  margin-block: 1rem;
}

.career-carousel .career-card button:hover {
  text-decoration: underline;
}

.career-carousel .career-card button .icon-angle-right-blue {
  height: 14px;
  width: 10px;
  margin-left: 6px;
  margin-top: 2px;
}

.career-carousel .career-slides-navbar {
  display: flex;
}

.career-carousel .career-slides-nav {
  display: inline-flex;
  align-items: center;
  margin-top: 3.125rem;
  margin-bottom: 2.5rem;
  margin-inline: auto;
}

.career-carousel .career-slides-nav span {
  width: 6px;
  height: 6px;
  margin: 0 3px;
  border-radius: 50%;
  background: #0003;
}

.career-carousel .career-slides-nav span.active-nav {
  background: var(--link-color);
}

.career-carousel .career-slides-nav .btn-angle {
  height: 1.5rem;
  width: 1rem;
  margin-inline: 0.5rem;
}

